[workspace]
members = [
    "kirl",
    "kirl_common",
    "kirl_common_macro",
    "kirl_parser",
    "kirl_semantic_analyzer",
    "kirl_vm",
    "kirl_stdlib",
    "kirl_engine"
]

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
