[package]
name = "kirl_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "0.8.2"
anyhow = "1.0.43"
kirl_parser = { path = "../kirl_parser" }
kirl_semantic_analyzer = { path = "../kirl_semantic_analyzer" }
kirl_vm = { path = "../kirl_vm" }
kirl_stdlib = { path = "../kirl_stdlib" }
kirl_common = { path = "../kirl_common" }
