[package]
name = "kirl_parser"
version = "0.1.0"
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dec = "0.4.5"
tokenizer = { git = "https://github.com/White-Green/Yet-Another-Rust-Parser", rev = "cb7249f9da434fe4e44a089f798ce213a9d52140" }
#tokenizer = { path = "../../Yet-Another-Rust-Parser/tokenizer" }
tokenizer_generator = { git = "https://github.com/White-Green/Yet-Another-Rust-Parser", rev = "cb7249f9da434fe4e44a089f798ce213a9d52140" }
#tokenizer_generator = { path = "../../Yet-Another-Rust-Parser/parser_generator" }
parser = { git = "https://github.com/White-Green/Yet-Another-Rust-Parser", rev = "cb7249f9da434fe4e44a089f798ce213a9d52140" }
#parser = { path = "../../Yet-Another-Rust-Parser/parser" }
parser_generator = { git = "https://github.com/White-Green/Yet-Another-Rust-Parser", rev = "cb7249f9da434fe4e44a089f798ce213a9d52140" }
#parser_generator = { path = "../../Yet-Another-Rust-Parser/parser_generator" }
once_cell = "1.8.0"
arrayvec = "0.7.1"
