[package]
name = "kirl_semantic_analyzer"
version = "0.1.0"
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kirl_parser = { path = "../kirl_parser" }
regex = "1.5.4"
uuid = "0.8.2"
take_mut = "0.2.2"
kirl_common = { path = "../kirl_common" }
