[package]
name = "kirl_stdlib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["v4"] }
once_cell = "1.8.0"
kirl_semantic_analyzer = { path = "../kirl_semantic_analyzer" } #TODO:このへん単一crateにまとめて外に出したいね
kirl_vm = { path = "../kirl_vm" }
