[package]
name = "kirl_vm"
version = "0.1.0"
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "0.8.2"
kirl_semantic_analyzer = { path = "../kirl_semantic_analyzer" }
